--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,14 @@ table{
     font-size: smaller;
   }
 }
+
+/* login form */
+
+.login_image {
+  width: 100;
+}
+
+/* error_explanation */
+#error_explanation {
+  color: red;
+}
