--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NewToyApp</title>
+    <title>Toy App with Materialize CSS</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,11 +12,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-
-
       <%= yield %>
     </div>
-
-
   </body>
 </html>
