--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,14 @@
 <div class="navbar-fixed">
-  <nav>
+  <nav class="light-blue lighten-1">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
+      <%= link_to image_tag("materialize.png", style: "height: 50px; padding-top: 10px; padding-left: 10px;"), root_path, class: "brand-logo" %>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><%= link_to "Users", users_path %></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <% if !current_user.nil? %>
+          <li><%= link_to "Users", users_path %></li>
+          <li><%= link_to "Log out", logout_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
