--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,8 +20,8 @@
         <td><%= user.email %></td>
         <td><%= image_tag(user.display_image) if user.image.attached? %>
         <td><%= link_to 'Show', user, class: "waves-effect waves-light btn light-blue" %></td>
-        <td><%= link_to 'Edit', edit_user_path(user), class: "waves-effect waves-light btn green" %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn red" %></td>
+        <td><%= link_to 'Edit', edit_user_path(user), class: "waves-effect waves-light btn green" if current_user.admin? %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn red" if current_user.admin? %></td>
       </tr>
     <% end %>
   </tbody>
