--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
+<h3>User Information</h3>
+<hr/>
+<div class="row">
+  <div class="col l6">
+    <p>
+      <strong>First name:</strong>
+      <%= @user.first_name %>
+    </p>
+    <p>
+      <strong>Last name:</strong>
+      <%= @user.last_name %>
+    </p>
+    <p>
+      <strong>Email:</strong>
+      <%= @user.email %>
+    </p>
+  </div>
+  <div class="col l6">
+    <p>
+      <%= image_tag(@user.display_avatar) if @user.image.attached? %>
+    </p>
+  </div>
+</div>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
 
-<p>
-  <strong>Image:</strong>
-  <%= image_tag(@user.image) if @user.image.attached? %>
-</p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
