--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,8 @@
 
 <h3>Users</h3>
 
+<%= will_paginate %>
+
 <table class="mdl-data-table">
   <thead>
     <tr>
@@ -26,6 +28,8 @@
     <% end %>
   </tbody>
 </table>
+
+<%= will_paginate %>
 
 <br>
 
