--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
-<h3>New User</h3>
+<h5>New User</h5>
 
 <%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<% if !current_user.nil? %>
+  <%= link_to 'Back', users_path, class: "btn-small waves-effect waves-light indigo accent-1" %>
+<% else %>
+  <%= link_to 'Back', login_path, class: "btn-small waves-effect waves-light indigo accent-1" %>
+<% end %>
