--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,10 @@
     <div class="nav-wrapper">
       <%= link_to image_tag("materialize.png", style: "height: 50px; padding-top: 10px; padding-left: 10px;"), root_path, class: "brand-logo" %>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <% if !current_user.nil? %>
+        <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
           <li><%= link_to "Log out", logout_path, method: :delete %></li>
-        <% end %>
-        <% if current_user.nil? %>
+        <% else %>
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
       </ul>
