Finish following users with Materialize CSS

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,9 +1,9 @@
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
   <div id="error_explanation">
-    <h6><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h6>
+    <h6><%= pluralize(object.errors.count, "error") %> prohibited this user from being saved:</h6>
 
     <ul>
-      <% @user.errors.full_messages.each do |message| %>
+      <% object.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
