--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -7,7 +7,10 @@
   </span>
   <br/>
   <br/>
-  <%= f.submit "Post", class: "btn-small waves-effect waves-light indigo" %>
+  <div class="row">
+    <%= f.submit "Post", class: "btn-small waves-effect waves-light indigo" %>
+  </div>
+
 <% end %>
 
 <script type="text/javascript">
