--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -5,14 +5,13 @@
   <% else %>
     <%= link_to image_tag("blank_image", class: "user-avatar", size: 50), micropost.user %>
   <% end %>
-  <div class="">
-    <span class="user"><%= link_to micropost.user.first_name + " " + micropost.user.last_name, micropost.user %></span>
-  </div>
   <div class="row">
+    <span class="user"><%= link_to micropost.user.first_name + " " + micropost.user.last_name, micropost.user %></span>
     <span class="timestamp">
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     </span>
   </div>
+
 </div>
   <div class="row mt-5">
     <div class="card card-border z-depth-2">
@@ -29,5 +28,12 @@
       </div>
       <% end %>
     </div>
+  </div>
+  <div class="row">
+    <span class="right-align">
+      <% if current_user?(micropost.user) %>
+        <%= link_to "delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: "btn-small waves-effect waves-light red" %>
+      <% end %>
+    </span>
   </div>
 </li>
