--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 <%= form_with(model: user, local: true) do |form| %>
-  <%= render 'shared/error_messages' %>
+  <%= render 'shared/error_messages', object: form.object %>
 <div class="row">
   <div class="col l6">
     <div class="field">
