--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,11 +11,16 @@
         <% else %>
           <%= image_tag("blank_image", class: "profile-image responsive-img circle z-depth-5 center", size: 200) %>
         <% end %>
-
       </h1>
       <h5 class="center-align">
         <%= @user.first_name %> <%= @user.last_name %>
       </h5>
+      <div class="row center-align">
+        <%= render 'follow_form' if logged_in? %>
+      </div>
+      <section class="stats center-align">
+        <%= render 'shared/stats' %>
+      </section>
     </section>
   </aside>
   <div class="col l8">
