--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,25 +1,29 @@
 <footer class="page-footer light-blue">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Materialize</h5>
+        <p class="grey-text text-lighten-4">A modern responsive front-end framework based on Material Design</p>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                  <% if logged_in? %>
+                    <li><%= link_to "Profile", current_user, class: "grey-text text-lighten-3" %></li>
+                    <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "grey-text text-lighten-3" %></li>
+                    <li><%= link_to "Users", users_path, class: "grey-text text-lighten-3" %></li>
+                    <li><%= link_to "Log out", logout_path, method: :delete, class: "grey-text text-lighten-3" %></li>
+                  <% else %>
+                    <li><%= link_to "Log in", login_path, class: "grey-text text-lighten-3" %></li>
+                  <% end %>
                 </ul>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2020 Copyright
+            <a class="grey-text text-lighten-4 right" href="https://materializecss.com/">For more info visit: Materialize CSS</a>
             </div>
           </div>
         </footer>
