Fix button spacing in edit profile

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,6 +39,9 @@
     <%= form.file_field :image %>
 </div>
 <% end %>
+<div class="row">
+
+</div>
 <div class="actions">
   <% if !current_user.nil? %>
     <%= form.submit "Update User", :class => 'btn-small waves-effect waves-light light-blue' %>
