Render error messages and fix account activation and password reset

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,6 +72,14 @@ table{
   color: red;
 }
 
+.alert-danger {
+  color: red;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: large;
+}
+
 /* PAGINATION DESIGN */
 .pagination{
   li.active{
