Apply title page helper

--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Reset Password") %>
 <div class="password-container">
   <div class="password-form">
     <h4>Reset password</h4>
