--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Forgot Password") %>
 <div class="password-container">
   <div class="password-form">
     <h4>Forgot password</h4>
