--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -3,7 +3,7 @@
     <%= f.text_area :content, placeholder: "Compose new micropost..." %>
   </div>
   <span class="image">
-    <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+    <%= f.file_field :images, accept: "image/jpeg,image/gif,image/png", multiple: true %>
   </span>
   <br/>
   <br/>
